[package]
name = "better-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.12"      # The Rust wrapper for FUSE
libc = "0.2"        # For System Error Codes (ENOENT, etc.)
env_logger = "0.10" # For logging
log = "0.4"
sha2 = "0.10"
hex = "0.4"
sled = "0.34"       # The Database
bincode = "1.3"     # To turn your Structs into binary for the DB
serde = { version = "1.0", features = ["derive"] } # To make Structs savable
clap = { version = "4.5.53", features = ["derive"] }
